<resources>
    <string name="app_name">Dolla Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">contact</string>
    <string name="ahmed_adel">Ahmed Adel</string>
    <string name="_01129025241">01129025241</string>
    <string name="enter_person_name">Enter Person Name</string>
    <string name="enter_person_tel_no">Enter Person Tel-no.</string>
    <string name="add_person">Add Person</string>
    <string name="add">Add</string>
    <string name="dolla_s_contacts">Dolla\'s Contacts</string>
    <string name="clear">clear</string>
</resources>